--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,5 @@
 .is-hidden {
+  display: none;
   opacity: 0;
   visibility: hidden;
 }
@@ -21,7 +22,16 @@ img {
 }
 
 body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: x-large;
+}
+
+.breed-select {
+  display: flex;
+  text-align: center;
+  margin: 0 auto;
+  width: 360px;
 }
 
 .description {
@@ -32,10 +42,18 @@ body {
   font-weight: 700;
 }
 
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .loader {
-  width: 48px;
-  height: 48px;
-  border: 3px solid #adadad;
+  display: flex;
+  align-items: center;
+  width: 96px;
+  height: 96px;
+  border: 6px solid #adadad;
   border-radius: 50%;
   display: inline-block;
   position: relative;
@@ -49,8 +67,8 @@ body {
   left: 0;
   top: 0;
   background: #00b5cd;
-  width: 16px;
-  height: 16px;
+  width: 32px;
+  height: 32px;
   transform: translate(-50%, 50%);
   border-radius: 50%;
 }
