--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,7 +21,7 @@ img {
     rgba(43, 72, 212, 1) 0%,
     rgba(0, 220, 255, 0.5) 100%
   );
-  margin-bottom: 12px;
+  margin-bottom: 150px;
 }
 
 .cat-info {
@@ -40,6 +40,7 @@ body {
 .breed-select {
   display: flex;
   margin: 0 auto;
+  height: 40px;
   width: 360px;
   padding: 8px; /* Add some padding for spacing */
   border: 2px solid #00b5cd; /* Add a border */
@@ -115,7 +116,11 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  background: #00b5cd;
+  background: radial-gradient(
+    circle,
+    rgba(0, 220, 255, 1) 0%,
+    rgba(43, 72, 212, 1) 100%
+  );
   width: 32px;
   height: 32px;
   transform: translate(-50%, 50%);
